fix(HumanResources) attendance clock icon color in dark mode mising

--- a/tine20/Tinebase/styles/darkmode.scss
+++ b/tine20/Tinebase/styles/darkmode.scss
@@ -275,15 +275,10 @@ body.dark-mode {
   .tb-login-panel .x-panel-body.x-form {
     background-color: #c0ced8;
   }
-  .attendance-clock-menu-button-clock_in .attendance-clock {
-    filter: invert(1) hue-rotate(180deg);
-  }
-  .attendance-clock-menu-button-clock_out .attendance-clock {
-    background-color: red !important;
-  }
   .attendance-clock-menu-button {
-    .x-btn-image {
-      background-color: black;
+    .attendance-clock,
+    div.x-btn-arrow {
+      filter: invert(1) hue-rotate(180deg) !important;
     }
     div.x-btn-arrow {
       background-color: white;
